--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
 	"name": "coldtrick/scroll_to_top",
 	"description": "Adds a scroll to top button to long pages",
+	"homepage": "https://www.coldtrick.com",
 	"type": "elgg-plugin",
 	"keywords": ["elgg", "plugin"],
 	"license": "GPL-2.0-only",
@@ -16,6 +17,6 @@
 		"coldtrick/releases": "dev-master"
 	},
 	"conflict": {
-		"elgg/elgg": "<3.0"
+		"elgg/elgg": "<4.0"
 	}
 }
